telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestStaticInnerClass.java
package tests;

class A {
	
	private static class B {
		public static class F {}
	}

	public A() {
	}

	void mmm(int x){}
	void m2(int x){}
	
	void m2(int x[]){}
	
	void m2(String x[]){}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}

