telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestStaticTopClassFail.java
package tests;

static class A {
	
	private class B {
		public class F {}
	}

	public A() {
	}

	void mmm(int x){}
	void m2(int x){}
	
	void m2(int x[]){}
	
	void m2(String x[]){}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}
